--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,9 @@ build/
 *.tar.gz
 *.rar
 
+#SDK
+cdk.out
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
