--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.wcdevs.blog.cdk</groupId>
+    <groupId>org.wcdevs.blog</groupId>
     <artifactId>cdk</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -22,7 +22,7 @@
 
     <organization>
         <name>wcDevs</name>
-        <url>https://wcdevs.org</url>
+        <url>https://blog.wcdevs.org</url>
     </organization>
 
     <inceptionYear>2021</inceptionYear>
