--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
 
     <lombok.version>1.18.20</lombok.version>
     <cdk.version>1.124.0</cdk.version>
+    <junit.version>5.8.1</junit.version>
+    <mockito.version>3.12.4</mockito.version>
   </properties>
 
   <organization>
@@ -114,6 +116,26 @@
       <version>${lombok.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+
     <!-- AWS Cloud Development Kit -->
     <dependency>
       <groupId>software.amazon.awscdk</groupId>
