Update maven.yml workflow
- Create GitHub release step for "main" branch

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,3 +54,14 @@ jobs:
         OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
         OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
         GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+
+    - name: Create GitHub Release
+      if: github.ref == 'refs/heads/main'
+      uses: marvinpinto/action-automatic-releases@v1.2.1
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: "latest"
+        prerelease: false
+        files: |
+          LICENSE
+          *.jar
