--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,11 @@
       <artifactId>lambda-event-sources</artifactId>
       <version>${cdk.version}</version>
     </dependency>
+    <dependency>
+      <groupId>software.amazon.awscdk</groupId>
+      <artifactId>events-targets</artifactId>
+      <version>${cdk.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
