--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -28,7 +28,7 @@ body:
   - type: textarea
     id: alternative
     attributes:
-      label: Have you considered andy alternatives? Which?
+      label: Have you considered any alternatives? Which?
       description: Describe alternatives you've considered
       placeholder: A clear and concise description of any alternative solutions or features you've considered.
     validations:
