--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,10 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
     <lombok.version>1.18.22</lombok.version>
-    <cdk.version>1.146.0</cdk.version>
     <junit.version>5.8.2</junit.version>
     <mockito.version>4.3.1</mockito.version>
+    <awscdk.version>2.17.0</awscdk.version>
+    <constructs.version>10.0.95</constructs.version>
   </properties>
 
   <organization>
@@ -146,63 +147,13 @@
     <!-- AWS Cloud Development Kit -->
     <dependency>
       <groupId>software.amazon.awscdk</groupId>
-      <artifactId>core</artifactId>
-      <version>${cdk.version}</version>
+      <artifactId>aws-cdk-lib</artifactId>
+      <version>${awscdk.version}</version>
     </dependency>
     <dependency>
-      <groupId>software.amazon.awscdk</groupId>
-      <artifactId>ec2</artifactId>
-      <version>${cdk.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>software.amazon.awscdk</groupId>
-      <artifactId>elasticloadbalancingv2</artifactId>
-      <version>${cdk.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>software.amazon.awscdk</groupId>
-      <artifactId>autoscaling</artifactId>
-      <version>${cdk.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>software.amazon.awscdk</groupId>
-      <artifactId>rds</artifactId>
-      <version>${cdk.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>software.amazon.awscdk</groupId>
-      <artifactId>secretsmanager</artifactId>
-      <version>${cdk.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>software.amazon.awscdk</groupId>
-      <artifactId>ecr</artifactId>
-      <version>${cdk.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>software.amazon.awscdk</groupId>
-      <artifactId>iam</artifactId>
-      <version>${cdk.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>software.amazon.awscdk</groupId>
-      <artifactId>ecs</artifactId>
-      <version>${cdk.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>software.amazon.awscdk</groupId>
-      <artifactId>ssm</artifactId>
-      <version>${cdk.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>software.amazon.awscdk</groupId>
-      <artifactId>lambda-event-sources</artifactId>
-      <version>${cdk.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>software.amazon.awscdk</groupId>
-      <artifactId>events-targets</artifactId>
-      <version>${cdk.version}</version>
+      <groupId>software.constructs</groupId>
+      <artifactId>constructs</artifactId>
+      <version>${constructs.version}</version>
     </dependency>
   </dependencies>
 
