--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,17 @@
   <url>https://github.com/lealceldeiro/org.wcdevs.blog.cdk</url>
 
   <properties>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.release>17</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <lombok.version>1.18.22</lombok.version>
+    <lombok.version>1.18.24</lombok.version>
     <junit.version>5.8.2</junit.version>
-    <mockito.version>4.4.0</mockito.version>
-    <awscdk.version>2.18.0</awscdk.version>
-    <constructs.version>10.0.101</constructs.version>
+    <mockito.version>4.5.1</mockito.version>
+    <awscdk.version>2.24.0</awscdk.version>
+    <constructs.version>10.1.7</constructs.version>
   </properties>
 
   <organization>
