--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <url>https://github.com/lealceldeiro/org.wcdevs.blog.cdk</url>
 
   <properties>
+    <java.version>17</java.version>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <maven.compiler.release>17</maven.compiler.release>
